v0.5.1
	* fix nephos gem (binaries can be used out of an application)

v0.5.0
	* improve executables: version taking in count

v0.4
	* fix route matching
	* improve generator (help and display)
	* improve generator (usage of optparser)
	* improve documentation (and update)
	* change generator option --debug with --test
	* add lot of unitary tests on router
	* add test on application generator
	* add generator option (--no-build, --no-git, ...)
	* fix parameters
	* improve controller generator (names)
	* add puma to change the default web server
	* add environments
	* improve router errors
	* improve documentation (production mode)
	* add listen network parameter to run the server
	* fix server executable
	* improve errors
	* fix unitary tests about controller generator
	* improve gemspec changelog
	* improve generator
	* improve responder (with integer argument)
	* fix router helpers
	* add version to code
	* fix a file permissions
	* add generator route --rm
	* add test for generator (routes and route --rm)
	* improve routes generator with a 4th optional argument
	* fix regression for binary with --debug feature
	* improve routes generator
	* add nephos-status executable
	* add nephos-generator route option

v0.3
	* fix gem
	* add tests for generator
	* fix controller parameters
	* add new unitary tests
	* improve documentation (and fix it)
	* add documentation (guide for slim, sequel, generator)

v0.2
	* improve global coherence (file, class, consts names)
	* rename directory "controllers/" -> "app/"
	* add class params
	* change file place (controller)
	* improve controller
	* add unitary tests (params, controller)
	* minor fix bug
	* add documentation

v0.1
	* fix regressions from v0.1.11 and previous (routing)
	* add complet unitary tests (rendering)
	* add partial unitary tests (routing)
	* update gemspec
	* factorize some code
	* fix regressions from v0.1.10
	* improve rendering code
	* improve status content
	* add url's parameters like /u/:param